--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">Bitcoin ticker</string>
-    <string name="title_price_buy">Buy Price</string>
-    <string name="title_price_sell">Sell Price</string>
+    <string name="title_price_buy">Buy</string>
+    <string name="title_price_sell">Sell</string>
     <string name="title_price_15m">15m:</string>
     <string name="title_price_last">Last:</string>
     <string name="title_units">Units</string>
